--- a/src/components/Preloader/style.module.scss
+++ b/src/components/Preloader/style.module.scss
@@ -1,8 +1,9 @@
 .preloader {
+  position: absolute;
   height: 100vh;
   width: 100vw;
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   background: #beb8b8;
   color: #0e0e0e;
   z-index: 999;
