--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,21 @@ img {
   max-width: 100%;
   display: block;
 }
+
+html {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
