--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -9,7 +9,7 @@
   backdrop-filter: blur(10px);
   transform: translateZ(0);
   backface-visibility: hidden;
-  transition: background-color 0.3s ease; // Added smooth transition
+  transition: background-color 0.3s ease;
 
 
   * {
